[metadata]
name = pytrs
version = 0.1
author = Maicarons
author_email = maicarons@outlook.com
description = HeyTranser Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HeyTranser/PythonSDK
project_urls =
    Bug Tracker = https://github.com/HeyTranser/PythonSDK/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3
install_requires =
    pyyaml

[options.packages.find]
where = src